--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="C:\SkillFactory\MyProfile\static\main.css">
-    <link rel="stylesheet" href="C:\SkillFactory\MyProfile\static\reset.css">
-    <link rel="stylesheet" href="C:\SkillFactory\MyProfile\static\reset.min.css">
+    <link rel="stylesheet" href="C:\SkillFactory\MyProfileNew\static\main.css">
+    <link rel="stylesheet" href="C:\SkillFactory\MyProfileNew\static\reset.css">
+    <link rel="stylesheet" href="C:\SkillFactory\MyProfileNew\static\reset.min.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <p>Обратаня связь</p>
             <ul>
-                <li><a href="C:\SkillFactory\MyProfile\templates\index.html">Главная</a></li>
-                <li><a href="C:\SkillFactory\MyProfile\templates\about.html">Обо мне</a></li>
-                <li><a href="C:\SkillFactory\MyProfile\templates\contacts.html">Обратная связь</a></li>
+                <li><a href="C:\SkillFactory\MyProfileNew\templates\index.html">Главная</a></li>
+                <li><a href="C:\SkillFactory\MyProfileNew\templates\about.html">Обо мне</a></li>
+                <li><a href="C:\SkillFactory\MyProfileNew\templates\contacts.html">Обратная связь</a></li>
             </ul>
         </div>
     </nav>
