--- a/templates/about.html
+++ b/templates/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Обо мне</title>
-   <link rel="stylesheet" href="static/main.css">
-    <link rel="stylesheet" href="static/reset.css">
-    <link rel="stylesheet" href="static/reset.min.css">
+   <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="../static/reset.css">
+    <link rel="stylesheet" href="../static/reset.min.css">
 </head>
 <body>
     <nav class="navbar">
